--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "portfolio-vite",
-  "private": true,
   "version": "0.0.0",
+  "private": false,
   "type": "module",
+  "description": "My personal portfolio built with React and Vite",
+  "author": "Fred Okondza",
+  "homepage": "https://Fred-okondza.github.io/My_Portfolio_react",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "lint": "eslint ."
   },
   "dependencies": {
     "react": "^19.1.1",
@@ -21,6 +26,7 @@
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
+    "gh-pages": "^6.3.0",
     "globals": "^16.4.0",
     "vite": "^7.1.7"
   }
